# RNN_tabletennis

./: .gitignore  Kalman.ipynb  README.md  dataloader.py  kalman.py  main.py  model.py  test_on_pb.py  test_on_pretrain_model.py  trajectory_prediction.ipynb  util_MDN.py  util_sample.py
src/: CMakeLists.txt  TrajPredict.cpp  main.cc  main.h
src/cmake/Modules/: Eigen_VERSION.cmake  Protobuf_VERSION.cmake
src/include/: TrajPredict.h  main.h
